[b]1.01[/b] (Apr 19, 2014)

*Added/changed stuff in the install routine.
*Added BenikUI style in some more frames and tabs.
*Changed the fonts addon a bit. More elegant now and added BenikUI font in Quest title.
*Added an option to force or not BenikUI fonts. A game restart is required to apply.
*Played with the Style function.

[b]1.00[/b] (Apr 16, 2014)

*Final release.
*Fixed and cleaned many small thingies.
*Added Zygor guides in BenikUI style.
*Rearranged the options (got jealous from Blazeflack :P)

[b]0.49beta[/b] (Apr 13, 2014)

*Removed the statusbars from buffs and debuffs. Wasn't working as intended.
*Added an option to hide player text values (health, power or any customText), when mouse over to show xp or rep bars. This is done to prevent rep or xp text overlapping health or power values in case the text is wide (usually with big rep names). Each value will hide if their y offset is < -10.

[b]0.48beta[/b] (Apr 11, 2014)

*Added an option to disable BenikUI chat datatexts. In order to show, default ElvUI chat datatexts must be disabled.

[b]0.47beta[/b] (Apr 10, 2014)

*Layout fix on hide/show chat datatexts.

*Added RareCoordinator in BenikUI style. Minor changes in S&L styling.

*Fixed a lua error when the threat bar was set in left chat. Also fixed the threat bar behaviour when default ElvUI chat datatexts are enabled.
TODO: Auras status bars; ain't working as intended.



[b]0.46beta[/b] (Apr 9, 2014)

*Made BenikUI layout a seperate module.

*Different (more efficient) approach on hide/show chat datatexts.



[b]0.45beta[/b] (Apr 8, 2014)

*Fixed the detached portraits strata. They should now overlap the player and target frame.

*Fixed the xp/rep text format not changing cause were calling ElvUI's text format option. Added an option in BenikUI.

*BenikUI chat datatexts will hide when default ElvUI ones are shown. (needs a moar testing.. going to bed)

*Updated locales.

*Added the logo at the options. Probably I will remove it.. dunno yet
