@@ -47,7 +47,6 @@ L["Show in:"] = true
 L["Choose Actionbar to show to"] = true
 L['Bar 1'] = true
 L['Bar 2'] = true
-L["Dashboard"] = true
 L["Dashboards"] = true
 L['System'] = true
 L["Change the System Dashboard width."] = true
@@ -78,3 +77,5 @@ L["Hide text values"] = true
 L["Hides health, power and custom text values when mousing over, if their yOffset is"] = true
 L["Force BenikUI fonts"] = true
 L["Enables BenikUI fonts overriding the default combat and name fonts. |cffFF0000WARNING: This requires a game restart or re-log for this change to take effect.|r"] = true
+L["Transparent Backdrops"] = true
+L["Applies transparency in all actionbar backdrops and actionbar buttons."] = true
