@@ -1,4 +1,5 @@
 ﻿<Ui xmlns="http://www.blizzard.com/wow/ui/">
+	<Script file='options.lua'/>
 	<script file="dashboard.lua"/>
 	<Script file="panels\durability.lua"/>
 	<Script file="panels\volume.lua"/>
@@ -6,5 +7,5 @@
 	<Script file="panels\ms.lua"/>
 	<Script file="panels\tokens.lua"/>
 	<Script file="panels\memory.lua"/>
-	<Script file='options.lua'/>
+
 </Ui>
